[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poster"
version = "0.1.0"
description = "A Twitter bot that generates and posts daily market summaries using OpenAI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "tweepy",
    "requests",
    "openai>=1.40",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
